# vn1_bot

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  langgraph.json  lecture-545171-ced110.ipynb  nginx.conf  pyproject.toml
api-gateway/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
api-gateway/src/app/: run.py
api-gateway/src/app/api/: api.py  errors.py
api-gateway/src/app/api/dependencies/: auth.py
api-gateway/src/app/api/routers/: auth.py  chat.py  generator.py  health.py  skills.py
api-gateway/src/app/api/schemas/: auth.py  chat.py  common.py  skills.py
api-gateway/src/app/config/: setting.toml  settings.py  skills.py
api-gateway/src/app/use_cases/: proxy_generator.py  route_chat_stream.py  stream_skill.py
api-gateway/src/common/: enums.py  sse.py
api-gateway/src/common/config/settings/: settings.dev.toml  settings.prod.toml  settings.py  settings.toml
api-gateway/src/domain/: auth.py
api-gateway/src/domain/models/: skill.py
api-gateway/src/domain/services/: skill_selector.py
api-gateway/src/infrastructure/auth/: __init__.py  keycloak_auth_provider.py
api-gateway/src/infrastructure/clients/: generator_client.py  http_stream.py  skill_client.py
auth/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
auth/keycloak/: realm-export.json
auth/src/app/: run.py
auth/src/app/api/: api.py  errors.py
auth/src/app/api/routers/: auth.py  health.py
auth/src/app/api/schemas/: auth.py  common.py
auth/src/common/config/: __init__.py
auth/src/common/config/settings/: settings.dev.toml  settings.py  settings.toml
auth/src/infrastructure/keycloak/: .env.example  README.md  __init__.py  keycloak_auth_provider.py
data/: config  database.sqlite  database.sqlite-shm  database.sqlite-wal
docs/: DB.md  ERROR_PROTOCOL.md  README.md  mitmproxy_test.ipynb
frontend/: .dockerignore  .env.example  (+11 more)
generator/: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
generator/docs/: prompt_ru.md
generator/docs/examples/: debug.ipynb  example.ipynb  llm_test.ipynb  Косметика.docx  Лечебное питание.docx  Медизделия.docx  Примеры БАД.docx  Средства гигиены.docx
generator/src/app/: run.py
generator/src/app/api/: api.py  errors.py
generator/src/app/api/dependencies/: __init__.py  auth.py  gateway_auth.py
generator/src/app/api/routers/: __init__.py  generate.py
generator/src/app/api/schemas/: generate.py  result.py
generator/src/app/config/: api_config.py  info.py  setting.toml
generator/src/app/policies/: policies_loader.py
generator/src/app/policies/prompts/generation/: ai_information.yaml  ai_information_non_medicine_bad.yaml  ai_information_non_medicine_common.yaml  ai_information_non_medicine_cosmetics.yaml  ai_information_non_medicine_hygiene.yaml  ai_information_non_medicine_medical_device.yaml  ai_information_non_medicine_medical_nutrition.yaml
generator/src/app/policies/prompts/md_to_html/: content_prompt.md  content_prompt.yaml  menu_prompt.md  menu_prompt.yaml  system_prompt.yaml
generator/src/app/use_cases/: generated_file_storage.py
generator/src/app/use_cases/ai_description/: ai_description.py
generator/src/app/use_cases/docx_to_html_graph/: docx_to_html.py
generator/src/app/use_cases/docx_to_html_graph/src/: graph.py
generator/src/common/: __init__.py  enums.py  env.py  errors.py  exceptions.py  utils.py
generator/src/common/config/settings/: settings.dev.toml  settings.py  settings.toml
generator/src/common/logger/: my_logger.py
generator/src/domain/: __init__.py  auth.py
generator/src/domain/services/: generate.py
generator/src/infrastructure/: __init__.py
generator/src/infrastructure/auth/: __init__.py
generator/src/infrastructure/converters/: docx_to_md_converter.py
generator/src/infrastructure/debug/: observability.py
skills/gitlab-skill/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
skills/gitlab-skill/src/agents/common/: streaming.py
skills/gitlab-skill/src/agents/gitlab_skill/: nodes.py
skills/gitlab-skill/src/app/api/: api.py  errors.py
skills/gitlab-skill/src/app/api/routers/: health.py  skill.py
skills/gitlab-skill/src/app/api/schemas/: common.py  skill.py
skills/gitlab-skill/src/app/config/: __init__.py
skills/gitlab-skill/src/app/use_cases/: run_gitlab_skill.py
skills/gitlab-skill/src/app/workflows/common/: nodes.py
skills/gitlab-skill/src/app/workflows/gitlab_skill/: __init__.py  app.py  graph.py  state.py
skills/gitlab-skill/src/app/workflows/gitlab_skill/nodes/: __init__.py  build_response.py  search_gitlab.py  select_repositories.py  validate_request.py
skills/gitlab-skill/src/common/: sse.py
skills/gitlab-skill/src/common/config/settings/: __init__.py  settings.dev.toml  settings.py  settings.toml
skills/gitlab-skill/src/domain/models/: source.py
skills/gitlab-skill/src/domain/ports/: __init__.py  gitlab_search.py  query_planner.py
skills/gitlab-skill/src/domain/services/: gitlab_search.py
skills/gitlab-skill/src/infrastructure/gitlab/: __init__.py  answer.py  client.py  query_planner.py  search.py
skills/gitlab-skill/src/infrastructure/gitlab/prompts/: __init__.py  answer.yaml  query_planner.yaml  repository_selector.yaml
skills/gitlab-skill/src/infrastructure/llm/: __init__.py  llm.py
skills/orchestrator-skill/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
skills/orchestrator-skill/src/app/: run.py
skills/orchestrator-skill/src/app/api/: api.py
skills/orchestrator-skill/src/app/api/routers/: skill.py
skills/orchestrator-skill/src/app/api/schemas/: skill.py
skills/orchestrator-skill/src/app/use_cases/: run_orchestrator_skill.py
skills/orchestrator-skill/src/app/workflows/orchestrator/: __init__.py  app.py  graph.py  state.py
skills/orchestrator-skill/src/app/workflows/orchestrator/nodes/: __init__.py  select_skills.py  validate_request.py
(+795 files in other folders)
