[project]
name = "vn1-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain-openai>=1.1.6",
    "make>=0.1.6.post2",
    "pandoc>=2.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "slowapi>=0.1.9",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
