[project]
name = "vn1-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "langchain>=1.2.2",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.5.1",
    "make>=0.1.6.post2",
    "pandoc>=2.4",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "slowapi>=0.1.9",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
