[project]
name = "vn1-bot"
version = "1.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "httpx[socks]>=0.28.1",
    "langchain>=1.2.2",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "langsmith>=0.5.1",
    "make>=0.1.6.post2",
    "pandoc>=2.4",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "python-multipart>=0.0.20",
    "rich>=14.2.0",
    "slowapi>=0.1.9",
    "starlette>=0.49.3",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "arize-phoenix",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-openai",
    "opentelemetry-sdk",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
