[project]
name = "vn1-api-gateway"
version = "0.1.0"
description = "VN1 API Gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "httpx[socks]>=0.28.1",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "dynaconf>=3.3.2",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
src = ["src"]
target-version = "py313"

[tool.ruff.lint]
select = ["TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"generator".msg = "Межсервисные Python-импорты запрещены. Используй HTTP/SSE-контракты через клиентов api-gateway."
"skills".msg = "Межсервисные Python-импорты запрещены. Используй HTTP/SSE-контракты через клиентов api-gateway."
"api_gateway".msg = "Не импортируй сервисы как Python-пакеты внутри монорепозитория."
"vn1_bot".msg = "Не импортируй через корень монорепозитория. Держи импорты внутри текущего сервиса."

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../shared/python"]
